gccida/c0/process_init_element
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_init_element/src/c-typeck.c:6989:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *inited; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_init_element/src/c-typeck.c:6990:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v2; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_init_element/src/c-typeck.c:6992:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_init_element/src/c-typeck.c:6993:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_init_element/src/c-typeck.c:7001:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elttype_0; // [rsp+20h] [rbp-50h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_init_element/src/c-typeck.c:7002:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code eltcode; // [rsp+2Ch] [rbp-44h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_init_element/src/c-typeck.c:7004:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code fieldcode_0; // [rsp+3Ch] [rbp-34h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_init_element/src/c-typeck.c:7006:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code fieldcode; // [rsp+4Ch] [rbp-24h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_init_element/src/c-typeck.c:7022:6: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
if ( constructor_stack_0->replacement_value ) 
     ^~~~~~~~~~~~~~~~~~~
     constructor_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_init_element/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_init_element/src/c-typeck.c:7024:1: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
constructor_stack_0->replacement_value = value; 
^~~~~~~~~~~~~~~~~~~
constructor_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_init_element/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_init_element/src/c-typeck.c:7027:6: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
if ( constructor_stack_0->replacement_value ) 
     ^~~~~~~~~~~~~~~~~~~
     constructor_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_init_element/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_init_element/src/c-typeck.c:7034:9: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
while ( constructor_stack_0->implicit 
        ^~~~~~~~~~~~~~~~~~~
        constructor_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_init_element/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_init_element/src/c-typeck.c:7044:6: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
if ( constructor_range_stack_0 
     ^~~~~~~~~~~~~~~~~~~~~~~~~
     constructor_range_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_init_element/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_init_element/src/c-typeck.c:7081:1: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
spelling_0 = &spelling_base[constructor_depth]; 
^~~~~~~~~~
spelling
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_init_element/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_init_element/src/c-typeck.c:7162:1: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
spelling_0 = &spelling_base[constructor_depth]; 
^~~~~~~~~~
spelling
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_init_element/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_init_element/src/c-typeck.c:7210:1: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
spelling_0 = &spelling_base[constructor_depth]; 
^~~~~~~~~~
spelling
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_init_element/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_init_element/src/c-typeck.c:7234:1: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
constructor_range_stack_0 = 0LL; 
^~~~~~~~~~~~~~~~~~~~~~~~~
constructor_range_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_init_element/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_init_element/src/c-typeck.c:7243:7: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
if ( !constructor_range_stack_0 ) 
      ^~~~~~~~~~~~~~~~~~~~~~~~~
      constructor_range_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_init_element/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_init_element/src/c-typeck.c:7246:15: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
range_stack = constructor_range_stack_0; 
              ^~~~~~~~~~~~~~~~~~~~~~~~~
              constructor_range_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_init_element/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_init_element/src/obj/c-typeck.o] Error 1
